--- a/index.html
+++ b/index.html
@@ -5,66 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário e Tabela</title>
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #000000;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        h2 {
-            margin-top: 20px;
-            margin-bottom: 10px;
-            color: rgb(255, 255, 255);
-            text-align: center;
-        }
-
-        form {
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-            color: #666;
-        }
-
-        input[type="text"],
-        input[type="number"],
-        button {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: none;
-            border-radius: 5px;
-            box-sizing: border-box;
-            font-size: 16px;
-        }
-
-        button {
-            background-color: #0004ff;
-            color: white;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #6f00ff;
-        }
-
         table {
-            width: 100%;
             border-collapse: collapse;
-            border: 1px solid #ddd;
+            border: 1px solid rgb(0, 0, 0);
             background-color: #fff;
             border-radius: 5px;
             overflow: hidden;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         th, td {
@@ -74,13 +20,9 @@
         }
 
         th {
-            background-color: #f2f2f2;
-            color: #333;
+            background-color: #000000;
+            color: rgb(255, 255, 255);
             font-weight: bold;
-        }
-
-        tr:hover {
-            background-color: #f9f9f9;
         }
     </style>
 </head>
